# groq_cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
cli/: cli.py  config.py
cli/api/: base_provider.py  dummy_provider.py
cli/commands/: config.py  run.py
cli/database/: models.py
cli/services/: translation.py
docs/: configure.md  configure.ru.md  help.md  help.ru.md  installation.md  roadmap.md  roadmap.ru.md  structure.md
docs/en/: configure.md  database.md  help.md
docs/ru/: configure.md  database.md  help.md  installation.md  structure.md
templates/: default_config.json
