[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-cli"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "An advanced toolkit for prompt engineering and code interaction with large language models."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "sqlalchemy",
    "alembic",
]

[project.scripts]
chat = "cli.cli:main"
