[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "chat-cli"
version = "0.1.0"
authors = [
  { name="AleksMa", email="a1ex_ma@mail.ru" },
]
description = "An advanced toolkit for prompt engineering and code interaction with large language models."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "sqlalchemy",
    "alembic",
]

[project.scripts]
chat = "cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
